// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Alert Visual Snapshots renders alert with long message correctly: alert-long-message 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is a very long alert message that tests how the alert component handles extended content and maintains proper styling.
  </div>
</div>
`;

exports[`Alert Visual Snapshots renders default alert correctly: alert-default-variant 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is an alert message
  </div>
</div>
`;

exports[`Alert Visual Snapshots renders destructive alert correctly: alert-destructive-variant 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is an alert message
  </div>
</div>
`;

exports[`Badge Visual Snapshots renders badge with counter correctly: badge-counter 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
>
  42
</div>
`;

exports[`Badge Visual Snapshots renders default badge correctly: badge-default-variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
>
  Badge Text
</div>
`;

exports[`Badge Visual Snapshots renders destructive badge correctly: badge-destructive-variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
>
  Badge Text
</div>
`;

exports[`Badge Visual Snapshots renders outline badge correctly: badge-outline-variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
>
  Badge Text
</div>
`;

exports[`Badge Visual Snapshots renders secondary badge correctly: badge-secondary-variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
>
  Badge Text
</div>
`;

exports[`Button Visual Snapshots renders default size correctly: button-default-size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Visual Snapshots renders default variant correctly: button-default-variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 px-4 py-2"
>
  Button Text
</button>
`;

exports[`Button Visual Snapshots renders destructive variant correctly: button-destructive-variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-destructive text-destructive-foreground hover:bg-destructive/90 hover:shadow-lg h-10 px-4 py-2"
>
  Button Text
</button>
`;

exports[`Button Visual Snapshots renders disabled state correctly: button-disabled-state 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 px-4 py-2"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Button Visual Snapshots renders ghost variant correctly: button-ghost-variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
>
  Button Text
</button>
`;

exports[`Button Visual Snapshots renders icon size correctly: button-icon-size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 w-10"
>
  Button
</button>
`;

exports[`Button Visual Snapshots renders lg size correctly: button-lg-size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-11 rounded-md px-8"
>
  Button
</button>
`;

exports[`Button Visual Snapshots renders link variant correctly: button-link-variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer text-primary underline-offset-4 hover:underline hover:text-primary/80 h-10 px-4 py-2"
>
  Button Text
</button>
`;

exports[`Button Visual Snapshots renders loading state correctly: button-loading-state 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 px-4 py-2"
  data-loading="true"
>
  Loading Button
</button>
`;

exports[`Button Visual Snapshots renders outline variant correctly: button-outline-variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer border border-input bg-background hover:bg-accent hover:text-accent-foreground hover:border-accent h-10 px-4 py-2"
>
  Button Text
</button>
`;

exports[`Button Visual Snapshots renders secondary variant correctly: button-secondary-variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-secondary text-secondary-foreground hover:bg-secondary/80 hover:shadow-md h-10 px-4 py-2"
>
  Button Text
</button>
`;

exports[`Button Visual Snapshots renders sm size correctly: button-sm-size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-9 rounded-md px-3"
>
  Button
</button>
`;

exports[`Card Visual Snapshots renders basic card correctly: card-basic-layout 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Card Title
    </h3>
  </div>
  <div
    class="p-6 pt-0"
  >
    Card content goes here
  </div>
</div>
`;

exports[`Card Visual Snapshots renders card with long content correctly: card-long-content 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Long Content Card
    </h3>
  </div>
  <div
    class="p-6 pt-0"
  >
    This is a very long content that should test how the card handles extended text and content overflow scenarios.
  </div>
</div>
`;

exports[`Component Combinations Visual Tests renders form layout with multiple components: form-layout-combination 1`] = `
<div
  class="space-y-4 p-4 max-w-md"
>
  <div>
    <label
      class="block text-sm font-medium mb-2"
      for="email"
    >
      Email Address
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="email"
      placeholder="Enter your email"
      type="email"
    />
  </div>
  <div
    class="flex items-center space-x-2"
  >
    <button
      aria-checked="false"
      class="peer inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
      data-state="unchecked"
      id="notifications"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
        data-state="unchecked"
      />
    </button>
    <label
      class="text-sm"
      for="notifications"
    >
      Enable notifications
    </label>
  </div>
  <div
    class="flex space-x-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer border border-input bg-background hover:bg-accent hover:text-accent-foreground hover:border-accent h-10 px-4 py-2"
    >
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 px-4 py-2"
    >
      Save Changes
    </button>
  </div>
</div>
`;

exports[`Component Combinations Visual Tests renders status dashboard layout: status-dashboard-layout 1`] = `
<div
  class="grid gap-4 p-4"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center justify-between"
      >
        System Status
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
        >
          Online
        </div>
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex justify-between"
        >
          <span>
            CPU Usage
          </span>
          <span>
            45%
          </span>
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="45"
          aria-valuetext="45%"
          class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
          data-max="100"
          data-slot="progress"
          data-state="loading"
          data-value="45"
          role="progressbar"
        >
          <div
            class="bg-primary h-full w-full flex-1 transition-all"
            data-max="100"
            data-slot="progress-indicator"
            data-state="loading"
            data-value="45"
            style="transform: translateX(-55%);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      All systems are operational
    </div>
  </div>
</div>
`;

exports[`Dark Theme Component Tests renders button in dark theme correctly: button-dark-theme 1`] = `
<div
  class="dark"
>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-10 px-4 py-2"
  >
    Dark Theme Button
  </button>
</div>
`;

exports[`Dark Theme Component Tests renders card in dark theme correctly: card-dark-theme 1`] = `
<div
  class="dark"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Dark Theme Card
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      Content in dark theme
    </div>
  </div>
</div>
`;

exports[`Dark Theme Component Tests renders form elements in dark theme correctly: form-elements-dark-theme 1`] = `
<div
  class="dark"
>
  <div
    class="space-y-4 p-4"
  >
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      placeholder="Dark theme input"
    />
    <button
      aria-checked="false"
      class="peer inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
      data-state="unchecked"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
        data-state="unchecked"
      />
    </button>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
    >
      Dark Badge
    </div>
    <div
      class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
      role="alert"
    >
      <div
        class="text-sm [&_p]:leading-relaxed"
      >
        Dark theme alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Input Visual Snapshots renders default input correctly: input-default-state 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  placeholder="Enter text"
/>
`;

exports[`Input Visual Snapshots renders disabled input correctly: input-disabled-state 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  disabled=""
  placeholder="Disabled input"
/>
`;

exports[`Input Visual Snapshots renders input with error state correctly: input-error-state 1`] = `
<input
  class="flex h-10 w-full rounded-md border bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 border-red-500"
  placeholder="Error state"
/>
`;

exports[`Input Visual Snapshots renders input with value correctly: input-with-value 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  readonly=""
  value="Sample text"
/>
`;

exports[`Progress Visual Snapshots renders indeterminate progress correctly: progress-indeterminate 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
  data-max="100"
  data-slot="progress"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="bg-primary h-full w-full flex-1 transition-all"
    data-max="100"
    data-slot="progress-indicator"
    data-state="indeterminate"
    style="transform: translateX(-100%);"
  />
</div>
`;

exports[`Progress Visual Snapshots renders progress at 0% correctly: progress-0-percent 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  aria-valuetext="0%"
  class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
  data-max="100"
  data-slot="progress"
  data-state="loading"
  data-value="0"
  role="progressbar"
>
  <div
    class="bg-primary h-full w-full flex-1 transition-all"
    data-max="100"
    data-slot="progress-indicator"
    data-state="loading"
    data-value="0"
    style="transform: translateX(-100%);"
  />
</div>
`;

exports[`Progress Visual Snapshots renders progress at 25% correctly: progress-25-percent 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="25"
  aria-valuetext="25%"
  class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
  data-max="100"
  data-slot="progress"
  data-state="loading"
  data-value="25"
  role="progressbar"
>
  <div
    class="bg-primary h-full w-full flex-1 transition-all"
    data-max="100"
    data-slot="progress-indicator"
    data-state="loading"
    data-value="25"
    style="transform: translateX(-75%);"
  />
</div>
`;

exports[`Progress Visual Snapshots renders progress at 50% correctly: progress-50-percent 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  aria-valuetext="50%"
  class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
  data-max="100"
  data-slot="progress"
  data-state="loading"
  data-value="50"
  role="progressbar"
>
  <div
    class="bg-primary h-full w-full flex-1 transition-all"
    data-max="100"
    data-slot="progress-indicator"
    data-state="loading"
    data-value="50"
    style="transform: translateX(-50%);"
  />
</div>
`;

exports[`Progress Visual Snapshots renders progress at 75% correctly: progress-75-percent 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="75"
  aria-valuetext="75%"
  class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
  data-max="100"
  data-slot="progress"
  data-state="loading"
  data-value="75"
  role="progressbar"
>
  <div
    class="bg-primary h-full w-full flex-1 transition-all"
    data-max="100"
    data-slot="progress-indicator"
    data-state="loading"
    data-value="75"
    style="transform: translateX(-25%);"
  />
</div>
`;

exports[`Progress Visual Snapshots renders progress at 100% correctly: progress-100-percent 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="100"
  aria-valuetext="100%"
  class="bg-primary/20 relative h-2 w-full overflow-hidden rounded-full"
  data-max="100"
  data-slot="progress"
  data-state="complete"
  data-value="100"
  role="progressbar"
>
  <div
    class="bg-primary h-full w-full flex-1 transition-all"
    data-max="100"
    data-slot="progress-indicator"
    data-state="complete"
    data-value="100"
    style="transform: translateX(-0%);"
  />
</div>
`;

exports[`Switch Visual Snapshots renders checked switch correctly: switch-checked-state 1`] = `
<button
  aria-checked="true"
  class="peer inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-state="checked"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
    data-state="checked"
  />
</button>
`;

exports[`Switch Visual Snapshots renders disabled checked switch correctly: switch-disabled-checked 1`] = `
<button
  aria-checked="true"
  class="peer inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-disabled=""
  data-state="checked"
  disabled=""
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
    data-disabled=""
    data-state="checked"
  />
</button>
`;

exports[`Switch Visual Snapshots renders disabled switch correctly: switch-disabled-state 1`] = `
<button
  aria-checked="false"
  class="peer inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
    data-disabled=""
    data-state="unchecked"
  />
</button>
`;

exports[`Switch Visual Snapshots renders unchecked switch correctly: switch-unchecked-state 1`] = `
<button
  aria-checked="false"
  class="peer inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-state="unchecked"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
    data-state="unchecked"
  />
</button>
`;

exports[`Tabs Visual Snapshots renders tabs layout correctly: tabs-layout 1`] = `
<div
  class="flex flex-col gap-2"
  data-orientation="horizontal"
  data-slot="tabs"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="bg-muted text-muted-foreground inline-flex h-9 w-fit items-center justify-center rounded-lg p-[3px]"
    data-orientation="horizontal"
    data-slot="tabs-list"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-«r0»-content-tab1"
      aria-selected="true"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="active"
      id="radix-«r0»-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-«r0»-content-tab2"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r0»-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="radix-«r0»-content-tab3"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r0»-trigger-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    aria-labelledby="radix-«r0»-trigger-tab1"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="active"
    id="radix-«r0»-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content for Tab 1
  </div>
  <div
    aria-labelledby="radix-«r0»-trigger-tab2"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r0»-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-«r0»-trigger-tab3"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r0»-content-tab3"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;

exports[`Tabs Visual Snapshots renders tabs with many items correctly: tabs-many-items 1`] = `
<div
  class="flex flex-col gap-2"
  data-orientation="horizontal"
  data-slot="tabs"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="bg-muted text-muted-foreground inline-flex h-9 w-fit items-center justify-center rounded-lg p-[3px]"
    data-orientation="horizontal"
    data-slot="tabs-list"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-«r4»-content-tab1"
      aria-selected="true"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="active"
      id="radix-«r4»-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-«r4»-content-tab2"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r4»-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="radix-«r4»-content-tab3"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r4»-trigger-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
    <button
      aria-controls="radix-«r4»-content-tab4"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r4»-trigger-tab4"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 4
    </button>
    <button
      aria-controls="radix-«r4»-content-tab5"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r4»-trigger-tab5"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 5
    </button>
    <button
      aria-controls="radix-«r4»-content-tab6"
      aria-selected="false"
      class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-slot="tabs-trigger"
      data-state="inactive"
      id="radix-«r4»-trigger-tab6"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 6
    </button>
  </div>
  <div
    aria-labelledby="radix-«r4»-trigger-tab1"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="active"
    id="radix-«r4»-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content for 
    Tab 1
  </div>
  <div
    aria-labelledby="radix-«r4»-trigger-tab2"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r4»-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-«r4»-trigger-tab3"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r4»-content-tab3"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-«r4»-trigger-tab4"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r4»-content-tab4"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-«r4»-trigger-tab5"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r4»-content-tab5"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-«r4»-trigger-tab6"
    class="flex-1 outline-none"
    data-orientation="horizontal"
    data-slot="tabs-content"
    data-state="inactive"
    hidden=""
    id="radix-«r4»-content-tab6"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;
